funktsionaalsused olemas (css tuleb juurde)

--- a/todo.html
+++ b/todo.html
@@ -13,6 +13,12 @@
             <input type="text" name="title" id="title">
             <input type="text" name="description" id="description">
             <input type="date" name="date" id="date">
+            <label for="priority">Prioriteet:</label>
+            <select id="priority">
+                <option value="1">1 - High</option>
+                <option value="2">2 - Medium</option>
+                <option value="3">3 - Low</option>
+            </select>
         </div>
         <div id="buttonContainer">
             <button id="addButton">LISA</button>
