Parandatud  priority sort, täiendatud css

--- a/todo.html
+++ b/todo.html
@@ -23,8 +23,8 @@
         <div id="buttonContainer">
             <button id="addButton">LISA</button>
         </div>
-        <div id="taskList">
-            Taske pole
+        <div id="taskContainer">
+            <div id="taskList">Taske pole</div>
         </div>
     </div>
 </body>
